fix: flex wrap

--- a/static/style.less
+++ b/static/style.less
@@ -30,6 +30,7 @@
 .dice-event-text {
   display: inline-flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 /*
